Update Kabinet Page and add forgit password page

--- a/WorkWise/Pages/Kabinet.cshtml
+++ b/WorkWise/Pages/Kabinet.cshtml
@@ -18,7 +18,7 @@
         <div class="sidebar-header">
             <h3 class="brand">
                 <span class="ti-unlink"></span>
-                <span>easywire</span>
+                <span>WorkWise</span>
             </h3>
             <label for="sidebar-toggle" class="ti-menu-alt"></label>
         </div>
@@ -95,7 +95,7 @@
 
         <main>
 
-            <h2 class="dash-title">Overview</h2>
+            <h2 class="dash-title">Hi , </h2>
 
             <div class="dash-cards">
                 <div class="card-single">
@@ -103,7 +103,7 @@
                         <span class="ti-briefcase"></span>
                         <div>
                             <h5>Account Balance</h5>
-                            <h4>$30,659.45</h4>
+                            <h4>$00.00</h4>
                         </div>
                     </div>
                     <div class="card-footer">
@@ -116,7 +116,7 @@
                         <span class="ti-reload"></span>
                         <div>
                             <h5>Pending</h5>
-                            <h4>$19,500.45</h4>
+                            <h4>0/5</h4>
                         </div>
                     </div>
                     <div class="card-footer">
@@ -129,7 +129,7 @@
                         <span class="ti-check-box"></span>
                         <div>
                             <h5>Processed</h5>
-                            <h4>$20,659</h4>
+                            <h4>0</h4>
                         </div>
                     </div>
                     <div class="card-footer">
@@ -157,68 +157,68 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>App Development</td>
-                                        <td>15 Aug, 2020</td>
-                                        <td>22 Aug, 2020</td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
                                         <td class="td-team">
                                             <div class="img-1"></div>
                                             <div class="img-2"></div>
                                             <div class="img-3"></div>
                                         </td>
                                         <td>
-                                            <span class="badge success">Success</span>
+                                            <span class="badge success"></span>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>Logo Design</td>
-                                        <td>15 Aug, 2020</td>
-                                        <td>22 Aug, 2020</td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
                                         <td class="td-team">
                                             <div class="img-1"></div>
                                             <div class="img-2"></div>
                                             <div class="img-3"></div>
                                         </td>
                                         <td>
-                                            <span class="badge warning">Processing</span>
+                                            <span class="badge warning"></span>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>Server setup</td>
-                                        <td>15 Aug, 2020</td>
-                                        <td>22 Aug, 2020</td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
                                         <td class="td-team">
                                             <div class="img-1"></div>
                                             <div class="img-2"></div>
                                             <div class="img-3"></div>
                                         </td>
                                         <td>
-                                            <span class="badge success">Success</span>
+                                            <span class="badge success"></span>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>Front-end Design</td>
-                                        <td>15 Aug, 2020</td>
-                                        <td>22 Aug, 2020</td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
                                         <td class="td-team">
                                             <div class="img-1"></div>
                                             <div class="img-2"></div>
                                             <div class="img-3"></div>
                                         </td>
                                         <td>
-                                            <span class="badge warning">Processing</span>
+                                            <span class="badge warning"></span>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>Web Development</td>
-                                        <td>15 Aug, 2020</td>
-                                        <td>22 Aug, 2020</td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
                                         <td class="td-team">
                                             <div class="img-1"></div>
                                             <div class="img-2"></div>
                                             <div class="img-3"></div>
                                         </td>
                                         <td>
-                                            <span class="badge success">Success</span>
+                                            <span class="badge success"></span>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -231,21 +231,21 @@
                             <div class="summary-single">
                                 <span class="ti-id-badge"></span>
                                 <div>
-                                    <h5>196</h5>
+                                    <h5>0</h5>
                                     <small>Number of staff</small>
                                 </div>
                             </div>
                             <div class="summary-single">
                                 <span class="ti-calendar"></span>
                                 <div>
-                                    <h5>16</h5>
+                                    <h5>0</h5>
                                     <small>Number of leave</small>
                                 </div>
                             </div>
                             <div class="summary-single">
                                 <span class="ti-face-smile"></span>
                                 <div>
-                                    <h5>12</h5>
+                                    <h5>0</h5>
                                     <small>Profile update request</small>
                                 </div>
                             </div>
@@ -255,15 +255,15 @@
                             <div class="bday-flex">
                                 <div class="bday-img"></div>
                                 <div class="bday-info">
-                                    <h5>Dwayne F. Sanders</h5>
-                                    <small>Birthday Today</small>
+                                    <h5></h5>
+                                    <small>Something</small>
                                 </div>
                             </div>
 
                             <div class="text-center">
                                 <button>
                                     <span class="ti-gift"></span>
-                                    Wish him
+                                    Click
                                 </button>
                             </div>
                         </div>
