--- a/WorkWise/Pages/SingIN.cshtml
+++ b/WorkWise/Pages/SingIN.cshtml
@@ -23,7 +23,7 @@
                 <form action="#">
                     <input type="text" placeholder="Enter your email">
                     <input type="password" placeholder="Enter your password">
-                    <a href="#">Forgot password?</a>
+                    <a href="/Forgot">Forgot password?</a>
                     <input type="button" class="button" value="Login">
                 </form>
                 <div class="signup">
