--- a/WorkWise/wwwroot/css/Kabinet.css
+++ b/WorkWise/wwwroot/css/Kabinet.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 :root {
-    --main-color: #027581;
+    --main-color: #8a4eba;
     --color-dark: #1D2231;
     --text-grey: #8390A2;
 }
@@ -30,6 +30,7 @@
     color: #fff;
     overflow-y: auto;
     transition: width 500ms;
+    text-decoration: none;
 }
 
 .sidebar-header {
@@ -42,15 +43,18 @@
 
 .sidebar-menu {
     padding: 1rem;
+    text-decoration: none;
 }
 
 .sidebar li {
     margin-bottom: 1.5rem;
+    text-decoration: none;
 }
 
 .sidebar a {
     color: #fff;
     font-size: .8rem;
+    text-decoration: none;
 }
 
 .sidebar a span:last-child {
@@ -82,9 +86,10 @@
 }
 
 .main-content {
-    position: center;
+    position: relative;
     margin-left: 240px;
     transition: margin-left 500ms;
+    
 }
 
 header {
@@ -135,6 +140,7 @@ header {
 }
 
 main {
+    text-decoration: none;
     margin-top: 60px;
     background: #f1f5f9;
     min-height: 90vh;
@@ -144,24 +150,28 @@ main {
 .dash-title {
     color: var(--color-dark);
     margin-bottom: 1rem;
+    text-decoration: none;
 }
 
 .dash-cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 3rem;
+    text-decoration: none;
 }
 
 .card-single {
     background: #fff;
     border-radius: 7px;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+    text-decoration: none;
 }
 
 .card-body {
     padding: 1.3rem 1rem;
     display: flex;
     align-items: center;
+    text-decoration: none;
 }
 
 .card-body span {
@@ -170,10 +180,11 @@ main {
     padding-right: 1.4rem;
 }
 
-.card-body h5 {
-    color: var(--text-grey);
-    font-size: 1rem;
-}
+    .card-body h5 {
+        color: var(--text-grey);
+        font-size: 1rem;
+        text-decoration: none;
+    }
 
 .card-body h4 {
     color: var(--color-dark);
@@ -432,4 +443,5 @@ tbody tr:nth-child(even) {
         padding-right: 1rem;
     }
 }
+
 
