--- a/WorkWise/Pages/Index.cshtml
+++ b/WorkWise/Pages/Index.cshtml
@@ -25,12 +25,13 @@
         <video class="video-slide" src="/video/Markrting.mp4" autoplay muted loop></video>
         <video class="video-slide" src="/video/sunset.mp4" autoplay muted loop></video>
 
+        
 
 
          <div class="content active">
             <h1>WorkWise.<br><span>Programing</span></h1>
             <p>A freelance programmer on the exchange is a person who works on programming projects for a fee, usually using a means of remote communication, which provides the opportunity to collaborate with clients from all over the world and work at a time that is convenient for them.</p>
-            <a href="#">Go to</a>
+            <a href="/Freelancer/programing">Go to</a>
          </div>
         <div class="content">
             <h1>WorkWise.<br><span>Design</span></h1>
@@ -67,6 +68,9 @@
              <div class="nav-btn"></div>
              <div class="nav-btn"></div>
             <div class="nav-btn"></div>
+         </div>
+         <div>
+
          </div>
      </section>
 
