--- a/WorkWise/Pages/Freelancer/programing.cshtml
+++ b/WorkWise/Pages/Freelancer/programing.cshtml
@@ -10,8 +10,9 @@
 
 </head>
 <body>
-    <div class="container">
-        <h1>Freelancer.Programming</h1>
+    <div class="montainer">
+        <div class="mainbor">
+        <h1>Freelancers.<span>Programing</span></h1>
         <div class="sort">
             <label for="sort">Sort by:</label>
             <select id="sort">
@@ -19,39 +20,6 @@
                 <option value="completed-orders">Completed Orders</option>
                 <option value="reviews">Reviews</option>
             </select>
-        </div>
-        <div class="filter">
-            <div class="category">
-                <h3>Max</h3>
-                <input type="radio" name="max" id="max-10" value="10">
-                <label for="max-10">Less than 10</label>
-                <input type="radio" name="max" id="max-50" value="50">
-                <label for="max-50">Less than 50</label>
-                <input type="radio" name="max" id="max-100" value="100">
-                <label for="max-100">Less than 100</label>
-            </div>
-            <div class="category">
-                <h3>Min</h3>
-                <input type="radio" name="min" id="min-10" value="10">
-                <label for="min-10">More than 10</label>
-                <input type="radio" name="min" id="min-50" value="50">
-                <label for="min-50">
-                    More
-
-                    than 50
-                </label>
-                <input type="radio" name="min" id="min-100" value="100">
-                <label for="min-100">More than 100</label>
-            </div>
-            <div class="category">
-                <h3>Relevant</h3>
-                <input type="radio" name="relevant" id="relevant-1-month" value="1 month">
-                <label for="relevant-1-month">Within 1 month</label>
-                <input type="radio" name="relevant" id="relevant-3-months" value="3 months">
-                <label for="relevant-3-months">Within 3 months</label>
-                <input type="radio" name="relevant" id="relevant-6-months" value="6 months">
-                <label for="relevant-6-months">Within 6 months</label>
-            </div>
         </div>
         <div class="card-container">
             <div class="card">
@@ -69,7 +37,19 @@
                 <h2>Bob Johnson</h2>
                 <p>Hired through Fiverr</p>
             </div>
+            <div class="card">
+                <img src="https://via.placeholder.com/150" alt="Freelancer 3">
+                <h2>Bob Johnson</h2>
+                <p>Hired through Fiverr</p>
+            </div>
+            <div class="card">
+                <img src="https://via.placeholder.com/150" alt="Freelancer 3">
+                <h2>Bob Johnson</h2>
+                <p>Hired through Fiverr</p>
+            </div>
         </div>
+
+
     </div>
 
 </body>
