--- a/WorkWise/Pages/Index.cshtml
+++ b/WorkWise/Pages/Index.cshtml
@@ -36,27 +36,27 @@
         <div class="content">
             <h1>WorkWise.<br><span>Design</span></h1>
             <p>A freelance designer on the stock exchange is a creative individual who offers his services in the creation of graphic design, from logos and web design to banners and illustrations, collaborating with clients from all over the world and solving their business challenges in a visual way.</p>
-            <a href="#">Go to</a>
+            <a href="/Freelancer/design">Go to</a>
         </div>
         <div class="content">
             <h1>WorkWise.<br><span>Copiraiting</span></h1>
             <p>A freelance stock copywriter is someone who writes content for a variety of tasks, from articles and blogs to press releases and advertisements, working with clients around the world and serving their business content needs..</p>
-            <a href="#">Go to</a>
+            <a href="/Freelancer/copywriting">Go to</a>
         </div>
         <div class="content">
             <h1>WorkWise.<br><span>Translation</span></h1>
             <p>A freelance translator on the exchange is a person who provides text translation services from one language to another, working with clients from all over the world and helping them to communicate between different cultures and languages. He can do work in any field and in any language depending on his skills and knowledge..</p>
-            <a href="#">Go to</a>
+            <a href="/Freelancer/translator">Go to</a>
         </div>
         <div class="content">
             <h1>WorkWise.<br><span>Business</span></h1>
             <p>A freelance marketer on the stock exchange is an expert in the field of marketing who offers his services to clients from all over the world. It can provide a variety of services such as strategic marketing campaign planning, SEO optimization, social media management and others.</p>
-            <a href="#">Go to</a>
+            <a href="/Freelancer/finance">Go to</a>
         </div>
         <div class="content">
             <h1>WorkWise.<br><span>LifeStyle</span></h1>
             <p>And many other jobs and freelancers are waiting for you.</p>
-            <a href="#">Go to</a>
+            <a href="/Freelancer/SearchForFreelancers">Go to</a>
         </div>
          <div class="media-icons">
              <a href="#"></a>
