--- a/WorkWise/Pages/Index.cshtml
+++ b/WorkWise/Pages/Index.cshtml
@@ -31,7 +31,7 @@
          <div class="content active">
             <h1>WorkWise.<br><span>Programing</span></h1>
             <p>A freelance programmer on the exchange is a person who works on programming projects for a fee, usually using a means of remote communication, which provides the opportunity to collaborate with clients from all over the world and work at a time that is convenient for them.</p>
-            <a href="/Freelancer/programing">Go to</a>
+            <a href="/Employers/Programing">Go to</a>
          </div>
         <div class="content">
             <h1>WorkWise.<br><span>Design</span></h1>
