--- a/WorkWise/Pages/Kabinet.cshtml
+++ b/WorkWise/Pages/Kabinet.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model WorkWise.Pages.KabinetModel
 @{
+    Layout = null;
+
 }
 
 <html lang="en">
@@ -12,268 +14,104 @@
     <link rel="stylesheet" href="/css/Kabinet.css">
 </head>
 <body>
-
-    <input type="checkbox" id="sidebar-toggle">
-    <div class="sidebar">
-        <div class="sidebar-header">
-            <h3 class="brand">
-                <span class="ti-unlink"></span>
-                <span>WorkWise</span>
-            </h3>
-            <label for="sidebar-toggle" class="ti-menu-alt"></label>
-        </div>
-
-        <div class="sidebar-menu">
-            <ul>
-                <li>
-                    <a href="">
-                        <span class="ti-home"></span>
-                        <span>Home</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <span class="ti-face-smile"></span>
-                        <span>Team</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <span class="ti-agenda"></span>
-                        <span>Tasks</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <span class="ti-clipboard"></span>
-                        <span>Leaves</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <span class="ti-folder"></span>
-                        <span>Projects</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <span class="ti-time"></span>
-                        <span>Timesheet</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <span class="ti-book"></span>
-                        <span>Contacts</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <span class="ti-settings"></span>
-                        <span>Account</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-
-    <div class="main-content">
-
-        <header>
-            <div class="search-wrapper">
-                <span class="ti-search"></span>
-                <input type="search" placeholder="Search">
+        <nav class="sidebar">
+            <a href="#" class="logo">WorkWise</a>
+            <div class="menu-content">
+                <ul class="menu-items">
+                    <div class="menu-title">Your menu title</div>
+                    <li class="item">
+                        <a href="#">Your first link</a>
+                    </li>
+                    <li class="item">
+                        <div class="submenu-item">
+                            <span>First submenu</span>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                        <ul class="menu-items submenu">
+                            <div class="menu-title">
+                                <i class="fa-solid fa-chevron-left"></i>
+                                Your submenu title
+                            </div>
+                            <li class="item">
+                                <a href="#">First sublink</a>
+                            </li>
+                            <li class="item">
+                                <a href="#">First sublink</a>
+                            </li>
+                            <li class="item">
+                                <a href="#">First sublink</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="item">
+                        <div class="submenu-item">
+                            <span>Second submenu</span>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                        <ul class="menu-items submenu">
+                            <div class="menu-title">
+                                <i class="fa-solid fa-chevron-left"></i>
+                                Your submenu title
+                            </div>
+                            <li class="item">
+                                <a href="#">Second sublink</a>
+                            </li>
+                            <li class="item">
+                                <a href="#">Second sublink</a>
+                            </li>
+                            <li class="item">
+                                <a href="#">Second sublink</a>
+                            </li>
+                            
+                        </ul>
+                    </li>
+                    <li class="item">
+                        <a href="#">Your second link</a>
+                    </li>
+                    <li class="item">
+                        <a href="#">Your third link</a>
+                    </li>
+                </ul>
             </div>
-
-            <div class="social-icons">
-                <span class="ti-bell"></span>
-                <span class="ti-comment"></span>
-                <div></div>
-            </div>
-        </header>
-
-        <main>
-
-            <h2 class="dash-title">Hi , </h2>
-
-            <div class="dash-cards">
-                <div class="card-single">
-                    <div class="card-body">
-                        <span class="ti-briefcase"></span>
-                        <div>
-                            <h5>Account Balance</h5>
-                            <h4>$00.00</h4>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <a href="">View all</a>
-                    </div>
-                </div>
-
-                <div class="card-single">
-                    <div class="card-body">
-                        <span class="ti-reload"></span>
-                        <div>
-                            <h5>Pending</h5>
-                            <h4>0/5</h4>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <a href="">View all</a>
-                    </div>
-                </div>
-
-                <div class="card-single">
-                    <div class="card-body">
-                        <span class="ti-check-box"></span>
-                        <div>
-                            <h5>Processed</h5>
-                            <h4>0</h4>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <a href="">View all</a>
-                    </div>
-                </div>
-            </div>
-
-
-            <section class="recent">
-                <div class="activity-grid">
-                    <div class="activity-card">
-                        <h3>Recent activity</h3>
-
-                        <div class="table-responsive">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>Project</th>
-                                        <th>Start Date</th>
-                                        <th>End Date</th>
-                                        <th>Team</th>
-                                        <th>Status</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td class="td-team">
-                                            <div class="img-1"></div>
-                                            <div class="img-2"></div>
-                                            <div class="img-3"></div>
-                                        </td>
-                                        <td>
-                                            <span class="badge success"></span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td class="td-team">
-                                            <div class="img-1"></div>
-                                            <div class="img-2"></div>
-                                            <div class="img-3"></div>
-                                        </td>
-                                        <td>
-                                            <span class="badge warning"></span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td class="td-team">
-                                            <div class="img-1"></div>
-                                            <div class="img-2"></div>
-                                            <div class="img-3"></div>
-                                        </td>
-                                        <td>
-                                            <span class="badge success"></span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td class="td-team">
-                                            <div class="img-1"></div>
-                                            <div class="img-2"></div>
-                                            <div class="img-3"></div>
-                                        </td>
-                                        <td>
-                                            <span class="badge warning"></span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td class="td-team">
-                                            <div class="img-1"></div>
-                                            <div class="img-2"></div>
-                                            <div class="img-3"></div>
-                                        </td>
-                                        <td>
-                                            <span class="badge success"></span>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-
-                    <div class="summary">
-                        <div class="summary-card">
-                            <div class="summary-single">
-                                <span class="ti-id-badge"></span>
-                                <div>
-                                    <h5>0</h5>
-                                    <small>Number of staff</small>
-                                </div>
-                            </div>
-                            <div class="summary-single">
-                                <span class="ti-calendar"></span>
-                                <div>
-                                    <h5>0</h5>
-                                    <small>Number of leave</small>
-                                </div>
-                            </div>
-                            <div class="summary-single">
-                                <span class="ti-face-smile"></span>
-                                <div>
-                                    <h5>0</h5>
-                                    <small>Profile update request</small>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="bday-card">
-                            <div class="bday-flex">
-                                <div class="bday-img"></div>
-                                <div class="bday-info">
-                                    <h5></h5>
-                                    <small>Something</small>
-                                </div>
-                            </div>
-
-                            <div class="text-center">
-                                <button>
-                                    <span class="ti-gift"></span>
-                                    Click
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
+        </nav>
+        <nav class="navbar">
+            <i class="fa-solid fa-bars" id="sidebar-close"></i>
+        </nav>
+        <main class="main">
+            <h1>Admin Dashboard Content</h1>
         </main>
 
-    </div>
+
+    <script type="text/javascript">
+
+
+        const sidebar = document.querySelector(".sidebar");
+        const sidebarClose = document.querySelector("#sidebar-close");
+        const menu = document.querySelector(".menu-content");
+        const menuItems = document.querySelectorAll(".submenu-item");
+        const subMenuTitles = document.querySelectorAll(".submenu .menu-title");
+
+        sidebarClose.addEventListener("click", () => sidebar.classList.toggle("close"));
+
+        menuItems.forEach((item, index) => {
+            item.addEventListener("click", () => {
+                menu.classList.add("submenu-active");
+                item.classList.add("show-submenu");
+                menuItems.forEach((item2, index2) => {
+                    if (index !== index2) {
+                        item2.classList.remove("show-submenu");
+                    }
+                });
+            });
+        });
+
+        subMenuTitles.forEach((title) => {
+            title.addEventListener("click", () => {
+                menu.classList.remove("submenu-active");
+            });
+        });
+
+    </script>
 
 </body>
 </html>
